--- a/readme
+++ b/readme
@@ -6,4 +6,4 @@ Rodriguez Ponce, Eloy M.
 Adkins, Scott
 Gates, Bill
 
-![example-image-login](../Example Images/login.jpg)
+![example-image-login](../example-images/login.jpg)
