--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-Bienvenido al reposotorio del trabajo final de la Tecnicatura Superior en Programación. 
+Bienvenido al repositorio del trabajo final de la Tecnicatura Superior en Programación. 
 
 Alumnos:
 Peluffo, David
